# solana-wallet-adapter-rust

./: Cargo.toml  README.md
crate/: Cargo.toml
crate/src/: events.rs  utils.rs
