[workspace]
members = ["crate", "partial-idl-parser"]

resolver = "2"

[workspace.package]
authors = ["448-OG <superuser@448.africa>"]
version = "1.1.2"
license = "Apache-2.0 OR MIT"
edition = "2021"
rust-version = "1.84"
description = "Solana Wallet Adapter for Rust clients written in pure Rust"
homepage = "https://github.com/JamiiDao"
repository = "https://github.com/JamiiDao/SolanaWalletAdapter"
readme = "./README.md"
keywords = ["solana", "solana-pay", "wallet", "blockchain", "wallet-adapter"]
categories = ["cryptography::cryptocurrencies"]

[workspace.dependencies]
wallet-adapter = { path = "./crate" }
async-channel = "2.3.1"
log = "0.4.27"
bs58 = { version = "0.5.1" }
wasm-bindgen-futures = "0.4.50"
web-sys = { version = "0.3.92", features = [
    "Window",
    "Document",
    "Event",
    "EventTarget",
    "CustomEvent",
    "CustomEventInit",
    "Element",
    "HtmlElement",
    "Location",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "Headers",
    "PointerEvent",
    "Clipboard",
    "Navigator",
    "console",
    "HtmlLabelElement",
    "CssStyleDeclaration",
] }

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
