[package]
name = "wallet-adapter"
authors.workspace = true
version.workspace = true
license.workspace = true
edition.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
rust-version.workspace = true

[badges]
maintenance = { status = "passively-maintained" }

[dependencies]
ed25519-dalek = { version = "2.1.1", default-features = false, features = [
    "signature",
] }
async-channel.workspace = true
web-sys.workspace = true
thiserror = "2.0.12"
wasm-bindgen-futures.workspace = true
humantime = "2.2.0"
rand_core = { version = "0.9.3", features = ["os_rng"] }
rand_chacha = { version = "0.9.0", features = ["os_rng"] }
getrandom = { version = "0.3.2", features = ["std", "wasm_js"] }
bs58.workspace = true
blake3 = { version = "1.8.1", default-features = false }
log = { workspace = true, optional = true }
async-lock = "3.4.0"

[features]
default = ["logging"]
logging = ["dep:log"]

[dev-dependencies]
solana-sdk = "2.2.2"
bincode = "1.3.3"
jzon = "0.12.5"
serde_json = "1.0.140"
serde = { version = "1.0.219", features = ["derive"] }
